<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:gravity="right"
                    android:text="@string/username"/>
                <EditText
                    android:layout_weight="1"
                    android:id="@+id/username"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:gravity="right"
                    android:text="@string/password"/>
                <EditText
                    android:inputType="textPassword"
                    android:layout_weight="1"
                    android:id="@+id/password"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:gravity="right"
                    android:text="@string/email"/>
                <EditText
                    android:inputType="textEmailAddress"
                    android:layout_weight="1"
                    android:id="@+id/email"/>
            </TableRow>
        </TableLayout>
        <Button
            android:background="@drawable/border"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:text="@string/register"/>
    </LinearLayout>
</ScrollView>