<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_userName"
        android:inputType="text"
        android:text="bacdaibang"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/userName"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_passWord"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:inputType="textPassword"
        android:id="@+id/passWord"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:id="@+id/signInBtn"
            android:fontFamily="monospace"/>
        <Button
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:id="@+id/registerBtn"
            android:fontFamily="monospace"/>
    </LinearLayout>

</LinearLayout>